# shared_memory_cpp

./: CMakeLists.txt  HASH_CONSTANTS_EXPLAINED.md  Makefile  OPTIMIZATION_DESIGN.md  README.md  RWLOCK_GUIDE.md  clean_shared.cpp  hash_test  hash_test.cpp  improved_status.cpp  improved_status.h  multi_process_test  multi_process_test.cpp  optimized_example  optimized_example.cpp  optimized_status.cpp  optimized_status.h  performance_test  performance_test.cpp  read.cpp  rwlock_optimized_status.cpp  rwlock_optimized_status.h  rwlock_performance_test  rwlock_performance_test.cpp  shared_constants.h  shared_memory_export.cpp  shared_memory_export.h  shared_memory_inteface.h  test_example  test_example.cpp  write.cpp
